[gd_scene load_steps=3 format=2]

[ext_resource path="res://rooms/objects/key_inventory.gd" type="Script" id=1]
[ext_resource path="res://rooms/objects/LargeKey.tscn" type="PackedScene" id=2]

[node name="KeyInventory" type="Node2D"]
script = ExtResource( 1 )

[node name="KeyA1" parent="." instance=ExtResource( 2 )]
position = Vector2( 28.8025, 22.8151 )
rotation = -0.261799

[node name="KeyA2" parent="." instance=ExtResource( 2 )]
position = Vector2( 21.6177, 58.2353 )
rotation = -0.261799
key = 1

[node name="KeyA3" parent="." instance=ExtResource( 2 )]
position = Vector2( 60.5356, 51.7439 )
rotation = -0.261799
key = 2

[node name="KeyB1" parent="." instance=ExtResource( 2 )]
position = Vector2( 71.4391, 82.2164 )
rotation = -0.261799
key = 3

[node name="KeyB2" parent="." instance=ExtResource( 2 )]
position = Vector2( 76.8278, 21.0189 )
rotation = -0.261799
key = 4

[node name="KeyB3" parent="." instance=ExtResource( 2 )]
position = Vector2( 101.376, 56.5969 )
rotation = -0.261799
key = 5
